ResourceManager and PianoAudio structure
- I would prefer to be able to embed the '.wav' files into the 'PianoAudio.resx', but I get an error regarding serialization. So for now at least, linking it at compile time should suffice.
- Full error message (same message for all '.wav' files): "Type 'System.IO.MemoryStream' in Assembly 'System.Private.CoreLib, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e' is not marked as serializable."

--- a/Aural Voice/Aural Voice.csproj
+++ b/Aural Voice/Aural Voice.csproj
@@ -14,4 +14,19 @@
     
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="resources\PianoAudio.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>PianoAudio.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="resources\PianoAudio.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PianoAudio.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
